# attn-arena

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
attn_arena/attention/: __init__.py  base.py  gqa.py  mha.py  mqa.py  registry.py
attn_arena/checkpoints/: __init__.py  hf_llama.py
attn_arena/inference/: __init__.py  reporting.py  runner.py
attn_arena/models/: __init__.py  base.py  registry.py
attn_arena/models/llama/: __init__.py  config.py  model.py
requirements/: base.txt  dev.txt  test.txt
tests/unit/: test_attention_registry.py  test_gqa_smoke.py  test_hf_llama_checkpoint_loader.py  test_inference_reporting.py  test_inference_runner.py  test_llama_mha_smoke.py  test_model_registry.py  test_mqa_smoke.py  test_protocol_contracts.py
