[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "attn-arena"
version = "0.1.0"
description = "Benchmarking framework for modern LLM attention variants"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "attn-arena contributors" },
]
keywords = ["llm", "attention", "benchmarking", "inference", "pytorch"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.0.0",
  "pydantic>=2.0",
  "transformers>=4.36.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.1.0",
  "ruff>=0.9.2",
  "mypy>=1.11.2",
]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
]

[tool.uv]
# Use `uv sync` for runtime deps; `uv sync --extra dev --extra test` for full dev env.

[tool.hatch.build.targets.wheel]
packages = ["attn_arena"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "gpu: marks tests that require CUDA-capable GPU",
  "integration: marks end-to-end integration tests",
  "correctness: marks variant equivalence correctness tests",
]
